Fixing bug 425013. Make Firefox show the plugin finder UI for unsupported object tags w/o alternate content. r+sr=bzbarsky@mit.edu